--- a/FoHo/Base.lproj/Main.storyboard
+++ b/FoHo/Base.lproj/Main.storyboard
@@ -204,7 +204,7 @@
         <scene sceneID="dCh-va-kce">
             <objects>
                 <navigationController id="muk-si-6RT" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" tag="1" title="" image="search.png" selectedImage="search.png" id="m68-wv-BsQ" customClass="RAMAnimatedTabBarItem" customModule="RAMAnimatedTabBarController">
+                    <tabBarItem key="tabBarItem" tag="1" title="" image="searchTab" selectedImage="searchTab" id="m68-wv-BsQ" customClass="RAMAnimatedTabBarItem" customModule="RAMAnimatedTabBarController">
                         <inset key="imageInsets" minX="26" minY="35" maxX="28" maxY="23"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="color" keyPath="iconColor">
@@ -368,7 +368,7 @@
                         </subviews>
                         <color key="backgroundColor" red="0.28713333390000001" green="0.66748443710000005" blue="0.70442749640000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
-                    <tabBarItem key="tabBarItem" tag="4" image="settings.png" selectedImage="settings.png" id="Xiy-B4-zNE" customClass="RAMAnimatedTabBarItem" customModule="RAMAnimatedTabBarController">
+                    <tabBarItem key="tabBarItem" tag="4" image="settingTab" selectedImage="settingTab" id="Xiy-B4-zNE" customClass="RAMAnimatedTabBarItem" customModule="RAMAnimatedTabBarController">
                         <inset key="imageInsets" minX="30" minY="30" maxX="12" maxY="14"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="color" keyPath="iconColor">
@@ -477,8 +477,7 @@
         <scene sceneID="CbQ-Jz-kA6">
             <objects>
                 <navigationController id="8Mi-w3-7a6" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" image="Fav" selectedImage="Fav" id="32D-pt-5zP" customClass="RAMAnimatedTabBarItem" customModule="RAMAnimatedTabBarController">
-                        <inset key="imageInsets" minX="13" minY="17" maxX="11" maxY="10"/>
+                    <tabBarItem key="tabBarItem" title="" image="favorites" selectedImage="favorites" id="32D-pt-5zP" customClass="RAMAnimatedTabBarItem" customModule="RAMAnimatedTabBarController">
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="color" keyPath="iconColor">
                                 <color key="value" red="0.28108692169999999" green="0.36696153879999999" blue="0.71582502130000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -669,10 +668,14 @@
         <scene sceneID="Aep-DX-Eay">
             <objects>
                 <tableViewController id="KSO-SU-qTU" customClass="SideBarTableViewController" customModule="FoHo" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="QQq-Lb-SMQ">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" indicatorStyle="white" dataMode="prototypes" style="plain" separatorStyle="singleLineEtched" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="QQq-Lb-SMQ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="separatorColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="sectionIndexColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="sectionIndexBackgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="sectionIndexTrackingBackgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <view key="tableHeaderView" contentMode="scaleToFill" id="V8i-RZ-DLh">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="76"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -682,7 +685,7 @@
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <rect key="contentStretch" x="0.40000000000000002" y="1" width="1" height="1"/>
                                     <color key="minimumTrackTintColor" red="0.39970242979999998" green="0.78088372949999996" blue="0.36964565519999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    <color key="maximumTrackTintColor" red="0.13082352" green="0.745750252" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="maximumTrackTintColor" red="0.28108692169999999" green="0.36696153879999999" blue="0.71582502130000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <connections>
                                         <action selector="sliderChange:" destination="KSO-SU-qTU" eventType="valueChanged" id="JkY-He-o1d"/>
                                     </connections>
@@ -690,14 +693,14 @@
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Max Time:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n9Y-CW-Qts">
                                     <rect key="frame" x="8" y="8" width="80" height="21"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="15"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4yG-Y2-OmR">
                                     <rect key="frame" x="96" y="8" width="146" height="21"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
@@ -719,14 +722,14 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PrU-jh-2VX">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PrU-jh-2VX">
                                             <rect key="frame" x="8" y="0.0" width="240" height="36"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <accessibility key="accessibilityConfiguration">
                                                 <accessibilityTraits key="traits" staticText="YES" header="YES"/>
                                             </accessibility>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
+                                            <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="21"/>
+                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BUx-7Q-xsP">
@@ -750,6 +753,8 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Search Options" id="xWC-ea-Hr8"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="timeLabel" destination="4yG-Y2-OmR" id="lnW-4k-o7Q"/>
                         <outlet property="timeSlider" destination="5BP-9l-UCh" id="Vlg-zF-1eV"/>
@@ -783,7 +788,7 @@
         <scene sceneID="wlk-D2-ABv">
             <objects>
                 <navigationController id="p2u-aq-iCD" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" image="home.png" selectedImage="home.png" id="eGn-xv-oL3" customClass="RAMAnimatedTabBarItem" customModule="RAMAnimatedTabBarController">
+                    <tabBarItem key="tabBarItem" title="" image="homeTab" selectedImage="homeTab" id="eGn-xv-oL3" customClass="RAMAnimatedTabBarItem" customModule="RAMAnimatedTabBarController">
                         <inset key="imageInsets" minX="62" minY="73" maxX="62" maxY="54"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="color" keyPath="iconColor">
@@ -905,7 +910,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Fav" width="65" height="65"/>
         <image name="ShoppingCartTab" width="46" height="46"/>
         <image name="button:b6t-tY-hlA:image" width="266" height="285">
             <mutableData key="keyedArchiveRepresentation">
@@ -6033,10 +6037,11 @@ xAAAAMYAAADIAASufAAEroEABK6MAASulQAErqgABK6sAASutwAErsAABK7FAASuzQAErtAABK7VAASu
 QgAEr0cAAAAAAAAEAQAAAAAAAAA+AAAAAAAAAAAAAAAAAASvSQ
 </mutableData>
         </image>
+        <image name="favorites" width="35" height="35"/>
         <image name="heart.png" width="350" height="315"/>
-        <image name="home.png" width="300" height="300"/>
-        <image name="search.png" width="121" height="128"/>
-        <image name="settings.png" width="128" height="128"/>
+        <image name="homeTab" width="46" height="46"/>
+        <image name="searchTab" width="121" height="128"/>
+        <image name="settingTab" width="128" height="128"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="1k8-J8-4VK"/>
